# file-composer

./: .gitignore  setup.CodeLite.Default.Native.Debug.sh  setup.Makefile.Default.Native.Release.sh
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt
Source/App/etc/: loggerConfig.xml
Source/App/source/: main.cpp
Source/Lib/: CMakeLists.txt
Source/Lib/include/: ChunkDescriptor.h  FileComposite.h  FileMatcher.h  Hasher.h  Utility.h
Source/Lib/source/: ChunkDescriptor.cpp  FileComposite.cpp  FileMatcher.cpp  Hasher.cpp  Utility.cpp
Source/Test/: CMakeLists.txt
Source/Test/include/: FileTestBase.h
Source/Test/source/: FileMatcherTest.cpp  HasherTest.cpp  UtilityTest.cpp
